kubernetes/apps/flux-system/capacitor/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacitor
  namespace: flux-system
  labels:
    app.kubernetes.io/name: capacitor
    app.kubernetes.io/instance: capacitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: capacitor
      app.kubernetes.io/instance: capacitor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: capacitor
        app.kubernetes.io/instance: capacitor
    spec:
      serviceAccountName: capacitor
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: capacitor
          image: ghcr.io/gimlet-io/capacitor:v0.4.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
